<resources>
    <string name="app_name">Youtube MP3 Player</string>
    <string name="linkHint">7a66clRobKI</string>
    <string name="linkPrompt">ID:</string>
    <string name="playMusic">Play Music!</string>
    <string name="description">The purpose of this app is to play audio from a youtube video\'s Id.</string>
    <string name="play_pause">Play</string>
    <string name="share">Share</string>
    <string name="settings">Settings</string>
    <string name="favorite">Add to Favorites</string>
    <string name="display_favorites">Display Favorites</string>
    <string name="pref_themes">Themes</string>
    <string name="pref_font">Font</string>
    <string name="pref_select_theme">Select a Theme</string>
    <string name="pref_select_font">Select a Font</string>

    <string-array name="action_list">
        <item>Stream a song</item>
        <item>Favorites</item>
    </string-array>

    <string-array name="pref_themes_entries">
        <item>Light</item>
        <item>Dark</item>
    </string-array>

    <string-array name="pref_font_entries">
        <item>Casual</item>
        <item>Cursive</item>
    </string-array>

    <string name="pref_theme_default">Light</string>
    <string name="pref_font_default">Casual</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
