<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".StreamMusicFragment">


    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="16dp"
        android:paddingTop="16dp">

        <TextView
            android:id="@+id/linkPrompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/linkPrompt"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/linkInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/linkHint"
            android:inputType="textCapWords"
            android:textSize="15sp" />
    </LinearLayout>

    <Button
        android:id="@+id/playMusic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/playMusic" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/id_location" />

    <FrameLayout
        android:id="@+id/content_frame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <CheckBox
        android:id="@+id/favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/favorite" />

</LinearLayout>